--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ div {
 }
 
 .banner {
-  background-image: url(https://source.unsplash.com/random/1000x500);
+  background-image: url(https://images.unsplash.com/photo-1683419632224-335f97cfba04?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
   background-size: cover;
   color: white;
   padding: 120px 0;
